kube-stage.yml
apiVersion: v1
kind: Service
metadata:
  name: mq-panel-back-stage
  namespace: mq-loyalty-stage
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: mq-panel-back-stage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mq-panel-back-stage
  namespace: mq-loyalty-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mq-panel-back-stage
  template:
    metadata:
      labels:
        app: mq-panel-back-stage
    spec:
      containers:
        - name: mq-panel-back-stage
          image: <IMAGE>
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
